--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-transformer-sharp": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.9.0",
   },
   "devDependencies": {
     "prettier": "^2.8.8"
