--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-sharp": "^5.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
     "react-bootstrap": "^1.6.6",
   },
   "devDependencies": {
