--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby-transformer-sharp": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-bootstrap": "^1.6.6",
+    "react-bootstrap": "^1.6.6"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
